<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        app:title="Student Organizer"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/tasks"
                android:text="@string/tasks"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/subjects"
                android:text="@string/subjects"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/teachers"
                android:text="@string/teachers"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/marks"
                android:text="@string/marks"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/my_schedule"
                android:text="@string/my_schedule"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/univ_schedule"
                android:text="@string/uni_schedule"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/seed"
                android:text="@string/seed_database"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>