<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        app:title="Add Subject"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/subject_name_hint"
                android:lines="1"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:layout_marginEnd="@dimen/margin_med"
                style="@style/ListItem.FirstLine"/>

            <TextView
                style="@style/ListItem.FirstLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginEnd="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:gravity="center"
                android:text="@string/subject_type_hint"/>

            <Spinner
                android:id="@+id/subject_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginEnd="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:entries="@array/subject_type"/>

            <TextView
                style="@style/ListItem.FirstLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginEnd="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:gravity="center"
                android:text="@string/subject_tag_hint"/>

            <!-- todo : use dialog with colors instead of spinner-->
            <Spinner
                android:id="@+id/subject_color_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginEnd="@dimen/margin_med"
                android:layout_marginStart="@dimen/margin_med"
                android:entries="@array/subject_color_tag"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <include layout="@layout/teacher_item"
                    android:id="@+id/teacher_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"/>
                <ImageButton
                    android:id="@+id/teacher_select_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    style="@style/ListItem.FirstLine"
                    android:background="@drawable/edit_black"
                    android:contentDescription="Add/change teacher" />

            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                style="@style/ListItem.FirstLine"
                android:text="@string/save"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>